
2015-12-30  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c, codeoptim.c: Changed code to generate cob_screen as a
	  doubly linked list.
	* reserved.c (reserved_words): added GRID as synonym for LEFTLINE.

2015-12-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	part fixed bug #177 - added missing ODO checks for subordinate items
	* tree.h: renamed flag_odo_item to flag_odo_relative, add new flag_odo_item
	* typeck.c, codegen.c: adjustments for changes to tree.h
	* typeck.c (cb_validate_program_data): set flag_odo_item for ODO parents
	* typeck.c (cb_build_identifier): generate cob_check_odo for all sub-items
	  of items with flag_odo_item (instead of only for ODO fields of itself)

2015-12-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.c (invalid_value): added output for not-numeric, min, max
	* config.c (cb_config_entry): validate word length against COB_MAX_WORDLEN
	* cobc.c (process_command_line): moved check of configuration values for
	  tab-width and text-columns to config.c (cb_config_entry)
	* cobc.c (process_command_line): process the command line twice: first time
	  for handling all options that read a complete configuration or are
	  output-only options, the second time for every other option including
	  overriding of single configuration flags
	* error.c, cobc.h: new (configuration_warning)
	* config.c (cb_load_conf): issue a warning if a previous loaded configuration
	  is discarded

2015-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	fixed bug #172 - NESTED OCCURS with DEPENDING not working
	* field.c (validate_field_1): allow nested ODO with complex-odo = yes
	* codegen.c (output_data): recalculate size for nested ODO by -fodoslide

2015-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: added checks of number of args passed to
	  FORMATTED-(DATE)TIME.
	* parser.y, reserved.c: added SYSTEM-OFFSET to FORMATTED-(DATE)TIME.