@@ -1,4 +1,8 @@
 
+2015-12-31  Edward Hart <edward.dan.hart@gmail.com>
+
+	* common.h: added COB_SCREEN_GRID.
+
 2015-12-30  Edward Hart <edward.dan.hart@gmail.com>
 
 	* screenio.c: fixed bug #176 - added code to correctly find the line and
